# amicabal

./: CHANGELOG.md  README.md  amicabal.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: Amicabal.hs
src/Amicabal/: AST.hs
test/: Spec.hs
