cabal-version:       2.4
name:                amicabal
version:             0.0.0.0
synopsis:            Friendly Haskell config format (cabal) helper and linter
description:
    Friendly Haskell config format (cabal) helper and linter.
    See [README.md](https://github.com/kowainik/amicabal#amicabal) for more details.
homepage:            https://github.com/kowainik/amicabal
bug-reports:         https://github.com/kowainik/amicabal/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2021 Kowainik
category:            Cabal, CLI, Development, Linter
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.3

source-repository head
  type:                git
  location:            https://github.com/kowainik/amicabal.git

common common-options
  build-depends:       base ^>= 4.14.1.0
                     , relude

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Amicabal

executable amicabal
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       amicabal
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite amicabal-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       amicabal
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
